--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "tsc": "tsc",
-        "start": "node dist/index.js",
+        "start": "tsc && node dist/index.js",
         "build": "tsc & npm run start"
     },
     "author": "Gabriel Freire <gabrielfreiredev@gmail.com>",
@@ -35,7 +35,18 @@
     ],
     "dependencies": {
         "@stdlib/stdlib": "0.0.36",
-        "electron": "^1.8.4"
+        "@types/d3": "^5.0.0",
+        "csv": "^3.0.2",
+        "d3": "^5.1.0",
+        "dspjs": "^1.0.0",
+        "electron": "^1.8.4",
+        "es6-promise": "^4.2.4",
+        "express": "^4.16.3",
+        "google-charts": "^1.1.0",
+        "isomorphic-fetch": "^2.2.1",
+        "node-fetch": "^2.1.2",
+        "sound-parameters-extractor": "^1.4.0",
+        "tone": "^0.12.80"
     },
     "devDependencies": {
         "typescript": "^2.8.3"
