--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "tsc": "tsc",
-        "start": "tsc && node dist/index.js",
+        "start": "node dist/index.js",
         "build": "tsc & npm run start"
     },
     "author": "Gabriel Freire <gabrielfreiredev@gmail.com>",
